This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

19-Dec-2003 (Lars Duening)  (3.3.498)
  - (comm) When a connection can't be opened immediately with net_connect(),
       the socket was closed prematurely (reported by LynX).

14-Dec-2003 (Lars Duening)  (3.3.497)
  - (comm) When opening a connection with net_connect(), printing of
       the prompt clobbered the current_object, causing a crash.

21-Nov-2003 (Lars Duening)  (3.3.496)
  - (comm) Added new efun net_connect() (thanks, LynX!)
  - (object.c, sys/functionlist.h) Efun variable_list() didn't properly
       filter for static variables.

18-Nov-2003 (Lars Duening)  (3.3.495)
  - (mudlib/telnetneg.c, xerq/lpc/socketd.c) New versions from Fiona (thanks!)
  - (sprintf.c) When printing floats with %O/%Q, they are always printed
       with a decimal point (suggested by Fiona).

30-Oct-2003 (Lars Duening)  (3.3.494)
  - (prolang.y) When creating a foreach() instruction, don't get confused
       by visibility flags in the variable type. Before, a 'varargs mixed *'
       function parameter was errorneously recognized as reference
       (reported by Alwin and Fiona).
  - (prolang.y) When removing an unnecessary F_SAVE_ARG_FRAME from a
       functioncall, also update the last_expression value. Before,
       a F_CONST0 pushed in place of a void-functions return value
       was never optimized out.

17-Oct-2003 (Lars Duening)  (3.3.493)
  - (comm.c) Efun query_ip_number(): the return of the full socket
       address in a reference argument didn't work (thanks, Nostradamus).
  - (configure) More corrections to the detection of -lcrypto and -lz
       (reported by Jaroslaw).

15-Oct-2003 (Lars Duening)  (3.3.492)
  - (configure) Made sure that -lz always follows the -lmysqlclient,
       as some system apparently can't resolve all backward references
       (reported by Alwin).

02-Oct-2003 (Lars Duening)