@@ -1,6 +1,11 @@
 This file lists all changes made to the game driver in all gory detail.
 See the file HISTORY for a user-oriented summary of all the changes.
 
+22-Feb-2004 (Lars Duening)  (3.3.499)
+  - (comm) The net_connect() handling wasn't prepared for errors during the
+       LPC logon, occasionally re-trying the logon endlessly (reported 
+       by Dafire).
+
 19-Dec-2003 (Lars Duening)  (3.3.498)
   - (comm) When a connection can't be opened immediately with net_connect(),
        the socket was closed prematurely (reported by LynX).
